...
        app:sv_doneTextColor="@color/white"
        app:sv_doneStepMarkColor="@color/white"/>

        <com.example.ezhospital.Common.NonSwipeViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/view_pager"
            android:layout_below="@id/step_view"
            android:layout_above="@id/layout_button"
            />
    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
...
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btn_next_step"
            android:enabled="false"
            android:text="Next"
            android:layout_marginRight="4dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            />
    </LinearLayout>

...
