...

    </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_confirm"
            android:text="CONFIRM"
            android:layout_marginTop="8dp"
            android:background="@color/gray"
            android:textColor="@color/white"
            />

    </LinearLayout>
...
